fix missing color refs

--- a/assets/pcss/components/rich-text.pcss
+++ b/assets/pcss/components/rich-text.pcss
@@ -53,7 +53,7 @@
       @apply mb-3 pl-6 relative;
 
       &:before {
-        @apply absolute w-6 inline-flex justify-center items-center left-0 top-0 text-red;
+        @apply absolute w-6 inline-flex justify-center items-center left-0 top-0 text-purple;
         content: '\2022';
         line-height: inherit;
       }
