--- a/assets/pcss/components/ui/hyperlink.pcss
+++ b/assets/pcss/components/ui/hyperlink.pcss
@@ -1,5 +1,5 @@
 .hyperlink {
-  @apply text-red;
+  @apply text-purple;
   transition: color theme('transitionDuration') ease-in-out;
   &:hover {
     @apply text-teal;
